# executorch

./: CMakeLists.txt  install_requirements.py
backends/aoti/: CMakeLists.txt  aoti_backend.py  aoti_partitioner.py
backends/aoti/runtime/: AotiBackend.cpp
